Aula Best Minds APEX/force-app/main/default/objects/Sala__c/fields/Escola__c.field-meta.xml
<CustomField>
    <fullName>Escola__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escola</label>
    <referenceTo>Escola__c</referenceTo>
    <relationshipLabel>Cursos</relationshipLabel>
    <relationshipName>Cursos</relationshipName>
    <type>Lookup</type>
</CustomField>