Aula Best Minds APEX/force-app/main/default/objects/Sala__c/fields/Noturno__c.field-meta.xml
<CustomField>
    <fullName>Noturno__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Noturno</label>
    <type>Checkbox</type>
</CustomField>