Aula Best Minds APEX/force-app/main/default/objects/Sala__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exatas</fullName>
            </value>
            <value>
                <fullName>Humanas</fullName>
            </value>
            <value>
                <fullName>Biológicas</fullName>
            </value>
            <value>
                <fullName>Artes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>